--- a/project/Makefile
+++ b/project/Makefile
@@ -11,10 +11,10 @@ AS              = msp430-elf-as
 all: blink-c.elf blink-s.elf
 
 #additional rules for files
-blink-c.elf: ${COMMON_OBJECTS} blinkMain.o led_off-c.o stateMachines.o led.o wdInterruptHandler.o p1_interrupt_handler.o switches.o lib/libTimer.a
+blink-c.elf: ${COMMON_OBJECTS} blinkMain.o red_control-c.c led_off-c.o stateMachines.o buzzer.o led.o wdInterruptHandler.o p1_interrupt_handler.o switches.o lib/libTimer.a
 	${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^
 
-blink-s.elf: ${COMMON_OBJECTS} blinkMain.o led_off-s.o stateMachines.o led.o wdInterruptHandler.o p1_interrupt_handler.o switches.o lib/libTimer.a
+blink-s.elf: ${COMMON_OBJECTS} blinkMain.o red_control-s.s led_off-s.o stateMachines.o buzzer.o led.o wdInterruptHandler.o p1_interrupt_handler.o switches.o lib/libTimer.a
 	${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^
 
 load-c: blink-c.elf
@@ -30,4 +30,4 @@ led.o: led.c led.h
 
 wdInterruptHandler.o: stateMachines.h led.h
 
-stateMachines.o: led.h stateMachines.h
+stateMachines.o: led.h stateMachines.h buzzer.h
