added state assy

--- a/project/Makefile
+++ b/project/Makefile
@@ -11,10 +11,10 @@ AS              = msp430-elf-as
 all: blink-c.elf blink-s.elf
 
 #additional rules for files
-blink-c.elf: ${COMMON_OBJECTS} blinkMain.o red_control-c.c led_off-c.o stateMachines.o buzzer.o led.o wdInterruptHandler.o p1_interrupt_handler.o switches.o lib/libTimer.a
+blink-c.elf: ${COMMON_OBJECTS} blinkMain.o state_advance-c.c red_control-c.c led_off-c.o stateMachines.o buzzer.o led.o wdInterruptHandler.o p1_interrupt_handler.o switches.o lib/libTimer.a
 	${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^
 
-blink-s.elf: ${COMMON_OBJECTS} blinkMain.o red_control-s.s led_off-s.o stateMachines.o buzzer.o led.o wdInterruptHandler.o p1_interrupt_handler.o switches.o lib/libTimer.a
+blink-s.elf: ${COMMON_OBJECTS} blinkMain.o state_advance-s.s red_control-s.s led_off-s.o stateMachines.o buzzer.o led.o wdInterruptHandler.o p1_interrupt_handler.o switches.o lib/libTimer.a
 	${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^
 
 load-c: blink-c.elf
@@ -28,6 +28,6 @@ clean:
 
 led.o: led.c led.h
 
-wdInterruptHandler.o: stateMachines.h led.h
+wdInterruptHandler.o: stateMachines.h led.h switches.h
 
-stateMachines.o: led.h stateMachines.h buzzer.h
+stateMachines.o: led.h stateMachines.h switches.h buzzer.h
